--- a/games.yaml
+++ b/games.yaml
@@ -54,6 +54,11 @@
   url: https://code.google.com/p/ad-astra-game/
   info: Ad Astra is a turn-based space strategy game written in Python that uses curses for its display.
 
+- name: Anonymine
+  url: https://oskog97.com/projects/anonymine/
+  info: A curses mode minesweeper solvable without guessing, and the only with von Neumann neighbourhoods.
+  play: http://anonymine-demo.osko97.com:8080/ or over SSH as 'anonymine' with same password on port 2222
+
 - name: aop
   url: http://aop.raffi.at/
   info: Ambassador of Pain (aop). A very nice and challenging arcade game.
