--- a/games.yaml
+++ b/games.yaml
@@ -52,7 +52,7 @@
   screencast: https://asciinema.org/a/82455
 
 - name: aop
-  url: http://aop.raffi.at/
+  url: https://raffi.at/view/code/aop
   info: Ambassador of Pain (aop). A very nice and challenging arcade game.
   screencast: https://asciinema.org/a/34678
 
@@ -107,7 +107,7 @@
   screencast: https://asciinema.org/a/31340
 
 - name: ascii portal
-  url: http://cymonsgames.com/asciiportal/
+  url: https://github.com/cymonsgames/ASCIIpOrtal
   info: ASCIIpOrtal is a text based puzzle game inspired by the popular video game.
 
 - name: astwar
@@ -123,6 +123,7 @@
   info: "air traffic controller game. It's a BSD game."
 
 - name: avanor
+  url: http://avanor.sourceforge.net//
   info: Rogue-like game with easy ADOM-like user interface.
 
 - name: bastet
@@ -143,6 +144,16 @@
   url: http://packages.debian.org/ru/sid/i386/games/bombardier
   info: This game is the same as the old Blitz16 game on Commodore 16/Plus 4, written by Simon Taylor.
 
+# 3 Candidates:
+#
+# Title doesn't match: https://github.com/martez81/ascii-dash
+#
+# Requires graphics: http://www.bd-fans.com/FreewareUnix.html
+#
+# Cavez of Phear
+#   Just a downloads list: https://pkgs.org/download/cavezofphear
+#   Site broken: http://www.x86.no/cavezofphear/
+#   https://web.archive.org/web/20160523182502/http://www.x86.no/cavezofphear/
 - name: boulder dash
   info: "A Boulder Dash game clone for your favorite terminal. You are trapped in the CAVEZ of PHEAR, your mission is to escape through all the caves and make it out alive. To escape through a cave you will have to find all the diamonds located in it. Once you've found all the diamonds, their powers combined will help you get to the next cave, one step closer to freedom."
   wikipedia: https://en.wikipedia.org/wiki/Boulder_Dash
@@ -162,7 +173,7 @@
   play: telnet or ssh on sdf.org
 
 - name: blocks
-  url: http://www.filewatcher.com/m/block-0.6.tgz.20110-0.html
+  url: https://web.archive.org/web/20170806174208/http://www.filewatcher.com/m/block-0.6.tgz.20110-0.html
   info: A block-based puzzle game.
 
 - name: bluemoon
@@ -174,13 +185,14 @@
   info: Brogue is a Roguelike game.
 
 - name: braincurses
-  url: http://sourceforge.net/projects/braincurses/
+  url: https://github.com/bderrly/braincurses
   info: A nice version of the mastermind game.
 
 - name: battlestar
   url: http://man.openbsd.org/OpenBSD-current/man6/battlestar.6
   info: "A tropical adventure game. It's a BSD game."
 
+# bj does not work for new users on sdf.org
 - name: bj
   info: a black-jack card game.
   play: telnet or ssh on sdf.org
@@ -208,7 +220,6 @@
   wikipedia: https://en.wikipedia.org/wiki/Caesar_cipher
 
 - name: Caribbean Stud
-  url:
   info: a multi-player card game, written by Hero
   play: telnet mud.darkerrealms.org 2000
 
@@ -226,6 +237,7 @@
   info: A highly unusual "infinite" adventure game written by Chris Newall.
 
 - name: cavez of phear
+  url: https://web.archive.org/web/20160523182502/http://www.x86.no/cavezofphear/
   info: cavez of phear is a boulder dash / digger like game for console using ncurses.
 
 - name: cblocks
@@ -274,12 +286,10 @@
   info: Colossal Cave Adventure (also known as ADVENT, Colossal Cave, or Adventure) is one of the earliest computer adventure games and a precursor form of role playing video game. The original version was designed by Will Crowther, a programmer and caving enthusiast who based the layout on part of the Mammoth Cave system in Kentucky.
 
 - name: Checkers
-  url:
   info: a two-player board game, written by Alexi
   play: telnet mud.darkerrealms.org 2000
 
 - name: Connect Four
-  url:
   info: a two-player slot game, written by Sarac
   play: telnet mud.darkerrealms.org 2000
 
@@ -297,7 +307,7 @@
   play: telnet mud.darkerrealms.org 2000
 
 - name: othello
-  url: http://david.weekly.org/othello/index.php3
+  url: https://web.archive.org/web/20130607084226/http://david.weekly.org/othello/index.php3
   info: a two-player board game, written by Unk
   play: telnet mud.darkerrealms.org 2000
 
@@ -314,7 +324,7 @@
   info: Another version of the tetris game.
 
 - name: cursedmate
-  url: http://www.uberwall.org/~dash/
+  url: https://web.archive.org/web/20130804035452/http://www.uberwall.org/~dash/
   info: A game with a hacking atmosphere.
 
 - name: crawl
@@ -413,7 +423,7 @@
   info: minesweeper game using curses.
 
 - name: freesweep
-  url: http://www.upl.cs.wisc.edu/~hartmann/sweep/
+  url: https://web.archive.org/web/20151103161601/http://www.upl.cs.wisc.edu/~hartmann/sweep/
   info: Freesweep is a console minesweeper-style game written in C for Unix-like systems.
 
 - name: frotz
@@ -441,12 +451,13 @@
   url: http://www.gnu.org/software/gnugo/
   info: GNU Go is a free program that plays the game of Go.
 
+# https://web.archive.org/web/20071012124206/http://gearhead.roguelikedevelopment.org:80/
 - name: gearhead
-  url: http://gearhead.chaosforge.org/
+  url: http://www.gearheadrpg.com/
   info: GearHead is the first roguelike to explore the world of “mechas” (giant robots).
 
 - name: gnake
-  url: http://lightless.org/gnake
+  url: https://web.archive.org/web/20140328150533/http://lightless.org/gnake
   info: Another variant of the snake game with a smooth movement.
 
 - name: gomoku
@@ -508,7 +519,7 @@
   wikipedia: https://en.wikipedia.org/wiki/Hamurabi
 
 - name: halls of mist
-  url: http://www.mikkolehtinen.net/mist/
+  url: https://web.archive.org/web/20170530185753/http://www.mikkolehtinen.net/mist/
   info: A nice roguelike game (variant of angband).
 
 - name: hellband
@@ -516,6 +527,7 @@
   info: Hellband is a Rogue-like game in which you descend through the nine circles of Hell and find an even more dangerous Hell beyond the city of Dis.
 
 - name: hydra slayer
+  url: http://www.roguetemple.com/z/hydra/
   info: A nice and easy roguelike game.
 
 - name: ninvaders
@@ -562,7 +574,6 @@
   info: This is a very elaborated game where you have to fight with your friends against conservative laws.
 
 - name: Let it Ride
-  url:
   info: a multi-player card game, written by Hero
   play: telnet mud.darkerrealms.org 2000
 
@@ -591,7 +602,7 @@
   info: A simple version of the Mastermind game.
 
 - name: Dr. Mario
-  url: http://www.filewatcher.com/m/dr_mario.tar.Z.13249-0.html
+  url: https://web.archive.org/web/20170806174214/http://www.filewatcher.com/m/dr_mario.tar.Z.13249-0.html
   info: Dr. Mario or BUGS is a clone of Nentendo’s Dr. Mario, well sort of.
   wikipedia: https://en.wikipedia.org/wiki/Dr._Mario
 
@@ -612,7 +623,7 @@
   info: "A racing card game in BSD games based on the Parker Brothers game Mille Bornes. It's a BSD game."
 
 - name: miscom
-  url: http://www.filewatcher.com/m/miscom.tar.gz.93995-0.html
+  url: https://web.archive.org/web/20170806174220/www.filewatcher.com/m/miscom.tar.gz.93995-0.html
   info: A curses-based game where you must defend cities from missile attack. It’s essentially a clone of Atari’s “Missile Command” (with some minor enhancements) for terminals, and has colour and sound.
 
 - name: moria
@@ -624,7 +635,7 @@
   info: Moo (a.k.a. Mastermind) supervisor and a very powerful Moo player.
 
 - name: monousa
-  url: http://www.filewatcher.com/m/monoUSA2.0.tgz.24322-0.html
+  url: https://web.archive.org/web/20170806174223/http://www.filewatcher.com/m/monoUSA2.0.tgz.24322-0.html
   info: A sort of monopoly game. At least two players are needed.
 
 - name: monop
@@ -661,7 +672,7 @@
   play: telnet on nethack.alt.org
 
 - name: netris
-  url: http://ftp.fr.openbsd.org/pub/OpenBSD/distfiles/
+  url: https://ftp.fr.openbsd.org/pub/OpenBSD/distfiles/netris-0.52.tar.gz
   info: "This is netris, a networked version of t*tris. It allows head to head two player games via a network."
 
 - name: nettoe
